fixed SOLE card action button display on mobile, changed filenames on uploads because they are getting truncated for some reason, truncated question text title on SOLE reflection

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,6 +148,10 @@ main, footer {
         margin: 0;
     }
 
+    .sole-card > .sole-action-buttons {
+        position: initial !important;
+    }
+
 }
 
 .sole-card-date {
